# infofile

./: .gitignore  CMakeLists.txt  README.md  readme.md  test.cpp
.github/workflows/: windows.yml
cmake-modules/: FindGoogleMock.cmake
data/: readme.md
examples/: CMakeLists.txt  advanced.c  basic.c  commandline.cc
infofile/: CMakeLists.txt  build-parser.bat  cmdline.cpp  configuration.h  infofile.cpp  infofile.h  lexer.l  main.cpp  parser.y  test.cpp
src/: CMakeLists.txt
src/infofile/: chars.cc  chars.h  configuration.h  file.cc  file.h  infofile.cc  infofile.h  infofile.test.cc  lexer.cc  lexer.h  lexer.l  lexer.test.cc  node.cc  node.h  parser.cc  parser.h  parser.y  printstring.cc  printstring.h  printstring.test.cc  reader.cc  reader.h
